--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.4.5",
+    "mongoose": "^8.6.0",
     "node-telegram-bot-api": "^0.66.0",
     "openai": "^4.57.0",
     "telegram-scraper": "^1.0.2"
